# OpenHexha

./: LICENSE  README.md  hexha.cabal
app/: Main.hs
src/: CoinbasePro.hs  IEX.hs  Utils.hs
src/Data/Text/: Chart.hs
src/Net/: Stocks.hs  Tests.hs
src/Net/CoinbasePro/: Authenticated.hs  Environment.hs  Headers.hs  Request.hs  Types.hs  Unauthenticated.hs  WebSocketFeed.hs
src/Net/CoinbasePro/Authenticated/: API.hs  Accounts.hs  CoinbaseAccounts.hs  Deposit.hs  Fills.hs  Headers.hs  Limits.hs  Orders.hs  Payment.hs  Request.hs  Transfer.hs  Withdrawal.hs
src/Net/CoinbasePro/MarketData/: AggregateOrderBook.hs  FullOrderBook.hs  Types.hs
src/Net/CoinbasePro/Unauthenticated/: API.hs
src/Net/CoinbasePro/WebSocketFeed/: Channel.hs  Request.hs  Response.hs
src/Net/CoinbasePro/WebSocketFeed/Channel/: Heartbeat.hs  Level2.hs  Status.hs  Ticker.hs
src/Net/CoinbasePro/WebSocketFeed/Channel/Full/: Activate.hs  Change.hs  Done.hs  Match.hs  Open.hs  Received.hs
src/Net/IEX/: Book.hs  Chart.hs  Company.hs  DelayedQuote.hs  Dividend.hs  Earnings.hs  EffectiveSpread.hs  Financials.hs  IntraDayStats.hs  Market.hs  NewsItem.hs  OHLC.hs  Previous.hs  PriceTime.hs  Quote.hs  RecentStats.hs  RecordStats.hs  Relevant.hs  Split.hs  Stats.hs  TimeSeries.hs  VolumeByVenue.hs
